More P1 Development and Debugging
Numerous changes

--- a/ESP8266/ARDF_Transmitter/ARDF_Transmitter/data/events.html
+++ b/ESP8266/ARDF_Transmitter/ARDF_Transmitter/data/events.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Tx</title>
+    <title>ARDF Events Settings</title>
     <style type="text/css">
         .button {
             background-color: #4CAF50;
@@ -808,7 +808,7 @@
 
                         case "SSID":
                             {
-                                var t = arr[1] + ": Settings";
+                                var t = arr[1] + ": Events Settings";
                                 document.getElementById("mainHeading").innerHTML = t;
                                 console.log(t);
                             }
